<resources>
    <string name="app_name">TomGuard</string>
    <string name="next">Next</string>
    <string name="app_icon">Application icon</string>
    <string name="title_login_page">Are you ready to check your tomato plants?</string>
    <string name="message_login_page">Please login first to use our app</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="splash_message">Simply snap a photo of your plant, and our software will analyze it automatically to identify the exact disease causing damage to it.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_camera">Camera</string>
    <string name="title_profile">Profile</string>
    <string name="title_predict">Predict</string>
    <string name="image_preview">Image preview</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="predict">Predict</string>
    <string name="setting_profile_name">John Doe</string>
    <string name="dummy_username">John Doe</string>
    <string name="dummy_email">john.doe@mail.com</string>
    <string name="logout">Logout</string>
    <string name="edit_email">Edit email</string>
    <string name="edit_name">Edit name</string>
    <string name="welcome">Welcome</string>
    <string name="camerax">CameraX</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="empty_image_warning">Please take or select image first</string>
    <string name="title_register">Create your account</string>
    <string name="message_register_page">Please fill in the form below to make it easier for us to get to know you</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="email_hint">Email</string>
    <string name="name_hint">Name</string>
    <string name="result_label">Result :</string>
    <string name="inference">Inference time :</string>
    <string name="dummy_result">Early Blight</string>
    <string name="inference_label">Inference time :</string>
    <string name="dummy_inference">65 ms</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="title_prediction_result">Prediction result</string>
    <string name="dummy_date">2024/06/15 16:39:01</string>
    <string name="item_banner_thumbnail">Prediction thumbnail</string>
    <string name="date_label">Taken at</string>
    <string name="prediction_history">Your prediction history</string>
    <string name="languages">Language</string>
    <string name="language_desc">Select language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_description">Change the color theme</string>
    <string name="logout_message">Are you sure you want to leave?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="change_username">Edit username</string>
    <string name="change_username_desc">Change your username</string>
    <string name="change_picture">Edit profile picture</string>
    <string name="change_password">Change password</string>
    <string name="account_setting">Account settings</string>
    <string name="application_setting">Application settings</string>
    <string name="username">username</string>
    <string name="blank_username">username</string>
    <string name="blank_email">email</string>
    <string name="language">Language</string>
    <string name="title_welcome_page">Welcome to TomGuard</string>
    <string name="dummy_percentage">70%</string>
    <string name="dummy_desc" translatable="false">Bacterial spot, caused by four Xanthomonas species, affects tomatoes and peppers worldwide, leading to leaf and fruit spots, defoliation, sun-scalded fruit, and yield loss. The disease thrives in temperatures of 75 to 86 ℉ and high precipitation, with varying prevalence based on weather conditions. In North Carolina, it is more common during wet seasons. On tomatoes, leaf lesions are initially water-soaked with a yellow halo, becoming dark brown to black and circular, rarely exceeding 3 mm in diameter. Pepper leaves drop prematurely, exposing fruit to sunscald. Fruit lesions start as small blisters, turning dark brown and scab-like. Bacterial spot can be confused with other diseases but can be identified by bacterial streaming under a light microscope</string>
    <string name="title_detail">Detail</string>
    <string name="recomendation_label">Recomendation :</string>
    <string name="predicted_as">Predicted as :</string>
    <string name="related_article_label">Related Article :</string>
    <string name="dummy_article_content">Bacterial Spot of Pepper and Tomato</string>
    <string name="dummy_article_url">https://content.ces.ncsu.edu/bacterial-spot-of-pepper-and-tomato</string>
    <string name="predicted_date_label">Successfully predicted at</string>
    <string name="no_related_articles">No related article</string>
    />
    <string-array name="language_array">
        <item>English</item>
        <item>Indonesia</item>
    </string-array>
</resources>