<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tv_label_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:maxLines="1"
        android:text="@string/name"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email" />

    <TextView
        android:id="@+id/tv_username_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:maxLines="1"
        android:text="@string/dummy_username"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/btn_edit_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_name"
        tools:text="@string/dummy_username" />

    <ImageView
        android:id="@+id/btn_edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/edit_name"
        android:src="@drawable/ic_edit_grey_24"
        app:layout_constraintBottom_toBottomOf="@+id/tv_username_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_username_edit"
        app:layout_constraintTop_toTopOf="@+id/tv_username_edit" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/btn_edit_name"
        app:layout_constraintStart_toStartOf="@id/tv_username_edit"
        app:layout_constraintTop_toBottomOf="@id/tv_username_edit" />

    <TextView
        android:id="@+id/tv_label_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:maxLines="1"
        android:text="@string/email"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_username_edit" />

    <TextView
        android:id="@+id/tv_email_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:maxLines="1"
        android:text="@string/dummy_email"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/btn_edit_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_email"
        tools:text="@string/dummy_email" />

    <ImageView
        android:id="@+id/btn_edit_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/edit_email"
        android:src="@drawable/ic_edit_grey_24"
        app:layout_constraintBottom_toBottomOf="@+id/tv_email_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_email_edit"
        app:layout_constraintTop_toTopOf="@+id/tv_email_edit" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/btn_edit_name"
        app:layout_constraintStart_toStartOf="@id/tv_username_edit"
        app:layout_constraintTop_toBottomOf="@id/tv_email_edit" />

</androidx.constraintlayout.widget.ConstraintLayout>